CHANGELOG

2.0.49
UTILS:

BUGFIX:

GENERAL:


2.0.48 (20220720)
UTILS:
* UTIL type=securityprofile securityprofiletype=url-filtering | improvements actions=url-filtering-action-set:[ACTION],[category]
* UTIL type=rule | introduce ruletype=tunnelinspection

BUGFIX:
* UTIL type=address/service/tag/application/zone | bugfix for 'filter=(object is.unused)' - direct benefit of class TunnelInspectionRule
* class logwriter/UTIL - fix to use settimezone() also on Expedition-Converter
* class Manageddevice - bugfix for reading manageddevice from Panorama
* class CIDR | bugfix for specific use case

GENERAL:
* introduce class TunnelInspectionRule


2.0.47 (20220714)
UTILS:
* UTIL type=Rule | introduce 'filter=(app has.fromquery subquery1)' 'subquery=([application filters])'
* UTIL type=rule | introduce 'filter=(app risk.recursive.is 3)'
* update internal JSON files for pan-os-php API usage
* multiple classes | improvements for buckbeak
* UTIL type=service-merger | improvements for exportcsv
* UTIL type=upload - extend help information
* UTIL type=securityprofile securityprofiletype=url-filtering | introduce actions=url-filtering-action-set:[ACTION],[category]

BUGFIX:
* class AppRuleContainer | bugfix for method membersExpanded()

GENERAL:
* update predefined to 859207467


2.0.46 (20220708)
UTILS:
* class DeviceOnPrem - introduction - Buckbeak - improving other Rule classes to be prepared for Snippets
* Buckbeak - different classes - improvement to support new DeviceOnPrem / Snippet feature
* UTIL type=[all-merger] - improve exportcsv export if argument projectfolder is used

BUGFIX:
* UTIL type=xml-isse | bugfix for checking 'groups with own membership as subgroup'
* Update class cidr | bugfix for Buckbeak address object variable handling
* class Container/DeviceCloud/DeviceOnPrem | bugfix add missing region XML reading

GENERAL:
* updating Docker files
* Update READMEdocker - improving workflow Container update