@@ -877,9 +877,9 @@ class AddressStore
                 {
                     unset($sortingArray[$groupName]);
 
+                    mwarning( "addressgroup: ".$groupName." is maybe not listed as it is involved in a loop usage", null, false );
                     foreach( $sortingArray as &$tmpGroupDeps )
                     {
-                        mwarning( "addressgroup: ".$groupName." is maybe not listed as it is involved in a loop usage", null, false );
                         if( isset($tmpGroupDeps[$groupName]) )
                             unset($tmpGroupDeps[$groupName]);
                     }
