@@ -2,6 +2,7 @@ CHANGELOG
 
 2.0.49
 UTILS:
+* pan-os-php type=diff | introduce for argument filter=JSONFILE.json
 
 BUGFIX:
 
